1.3.3
- Bugfix: No data from the Magento debug() function when uses as a
  configurable debug function.
- Bugfix: String encoding detection now works as intended. This should
  speed up things a lot.
- Bugfix: Dual output (file and frontend) works again.
- Bugfix: CLI detection now respects file output configuration.
- Bugfix: X-Browser Adjustments for the Hans skin.
- Change: Restructured the output, to make it (hopefully) better
  readable. The format is now much more similar to the actual code.
- Change: Refactored file handling (chunks and logfiles).
- Change: Cleaned up the file structure.

1.3.2
- Bugfix: Removed that annoying "Hidden internal properties"
  message.
- Bugfix /Feature: Added a small blacklist of classname/debugfunction
  combination which may cause problems during object analysis.
- Removed the old and ugly schablon skin.
- Added composer.json

1.3.1
- Bugfix: Local open function is working again.
- Bugfix: Displaying the local configuration does not
  re-enable kreXX anymore.
- Bugfix: Emergency break does not trigger a false positive
  anymore.
- Bugfix: Display of wrong values in the settings, in case
  those settings are not editable and there are some leftover
  values in the settings cookie.
- Bugfix: Proper display of static values in objects.
- Bugfix: Proper display of internal properties of predefined
  php classes
- Removed the Debug Cookie in favor for the local open
  function

1.3.0
- Added search function to the Hans skin.
- Added collapse-everything-else to the Hans skin.
- Added better recursion handling in the Hans skin.
- Added administration for the FE config.
- Added CLI detection and message handling in CLI.
- Bugfix: Possible jQuery errors when the host site is
  using the noConflict mode.
- Bugfix: Refactored css of the Hans skin for minimal
  interference with the host template. Most base64
  images were replaced by unicode characters.
- Bugfix: Possible false string encoding.

1.2.1a and 1.2.2.a