@@ -1,4 +1,6 @@
 1.3.3
+- kreXX will now work without a writable chunks folder, but this will
+  require a much more memory.
 - Bugfix: No data from the Magento debug() function when uses as a
   configurable debug function.
 - Bugfix: String encoding detection now works as intended. This should
@@ -10,6 +12,8 @@
   readable. The format is now much more similar to the actual code.
 - Change: Refactored file handling (chunks and logfiles).
 - Change: Cleaned up the file structure.
+- Change: kreXX will now evaluate all cookie settings right away, and
+  not when the value is actually needed (if at all).
 
 1.3.2
 - Bugfix: Removed that annoying "Hidden internal properties"
